[project]
dependencies = [
    "coloredlogs>=15.0.1",
    "deepspeed==0.8.3",
    "diskcache>=5.4.0",
    "einops>=0.6.0",
    "encodec>=0.1.1",
    "g2p_en>=2.1.0",
    "humanize>=4.4.0",
    "matplotlib>=3.6.0",
    "numpy>=1.23.3",
    "omegaconf>=2.2.3",
    "openTSNE>=0.6.2",
    "pandas>=1.5.0",
    "soundfile>=0.11.0",
    "torch>=1.13.0",
    "torchaudio>=0.13.0",
    "tqdm>=4.64.1",
]

name = "vall-e"
version = "0.1.0"
description = "Add a short description here"
authors = [{ name = "Omer Ben-Amram", email = "omerbenamram@gmail.com" }]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipykernel~=6.23.1",
    "librosa~=0.10.0.post2",
    "pydub~=0.25.1",
    "whisperx @ git+https://github.com/m-bain/whisperx.git@main",
]

[tool.hatch.metadata]
allow-direct-references = true
